// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses Sumary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    32,545,775.42
  </h1>
</div>
`;

exports[`Should correctly render expenses Sumary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    3.25
  </h1>
</div>
`;
